added surefire, jacoco and sonarcloud plugin for analysis